Created default conversion config XML file, and added vss-config.xsd
Add XML schema vss-config.xsd, add vss-config.xsd to pyproj

--- a/.editorconfig
+++ b/.editorconfig
@@ -20,6 +20,11 @@ tab_width = 4
 [*.{c,h}]
 end_of_line = lf
 
+[*.{xml,xsd}]
+indent_style = tab
+indent_size = 2
+tab_width = 2
+
 [*.pyproj]
 # The project save trims the final newline
 insert_final_newline = false
